wp-content/themes/betheme-child/style146.css
/* ... */
.answer-overflow-icon:hover {
  filter: brightness(0.8);
}

.hover-contrib::after {
  content: url('https://repobeats.axiom.co/api/embed/86b500d79c613015ad16f56df76c8e13f3fd98ae.svg');
  left: -510px;
  position: absolute;
  top: -395px;
  width: 845px;
  padding: 15px;
  box-shadow: 0px 0px 5px rgba(0,0,0,0.25);
  background-color: #000000E3;
  border-radius: 24px;
  backdrop-filter: blur(10px);
  pointer-events: none;
  opacity: 0;
  transform: scale(0.8) translateX(100px) translateY(100px);
  transition: opacity .25s ease-in-out, transform .35s ease-in-out;
}

.hover-contrib:hover::after {
  opacity: 1;
  transform: scale(1.0);
}

.mcb-wrap-inner-tc7x20tbk {
  margin-top: 65px;
}

.slick-slide img {
  width:auto;
}

.testimonials_slider.single-photo .testimonials_slider_ul li .single-photo-img {
  border-radius: 0px !important;
  max-width: 230px !important;
  width: auto;
  height: inherit;
}

.testimonials_slider.single-photo .slider_pager li {
  margin-top: 15px;
}

.author .title {
  font-size: 14px;
}

blockquote {
  margin-left: 65px;
  top: 5px;
  border: none;
  font-style: italic;
  text-decoration: none !important;
}

.testimonials_slider .testimonials_slider_ul li .bq_wrapper {
  padding: 30px 40px 10px;
  border-radius: 24px;
  background: #fff;
  margin: 0 0 20px !important;
}

.testimonials_slider .testimonials_slider_ul li .author {
  text-align: right;
}

.testimonials_slider .testimonials_slider_ul li .author h5 {
  margin-right:30px;
  font-style:italic;
}

.testimonials_slider .testimonials_slider_ul li .author h5 > a {
  color:#a2a2a2;
}

.testimonials_slider .testimonials_slider_ul li .author .company,
.testimonials_slider .testimonials_slider_ul li .hr_dots {
  display: none;
  visibility: hidden;
}

.icon-up-open-big::before {
  content: '\f062';
  font-family: 'Font Awesome 6 Free';
  font-weight: 900;
}

.testimonials_slider .testimonials_slider_ul li .author h5 > a::after {
  content: '\f0c1';
  font-family: 'Font Awesome 6 Free';
  font-style: normal;
  margin-left: 10px;
  font-size: 24px;
  top: 2px;
  position: relative;
  font-weight: 900;
  color: #888;
}

.testimonials_slider .testimonials_slider_ul li .author h5 > a.youtube::after {
  content: '\f167';
  color: #ff1a1a;
  font-size: 30px;
  top: 6px;
  font-family: 'Font Awesome 6 Brands';
}

.icon-quote::before {
  content: '\f10d';
  font-family: 'Font Awesome 6 Free';
  font-weight: 900;
  font-size: 45px;
  top: -5px;
  position: relative;
}

.mfn-close-icon > span::after {
  content: '\f057';
  font-family: 'Font Awesome 6 Free';
  font-weight: 900;
  display: inline-block;
  visibility: visible;
  font-size: 30px;
  right: 25px;
  top: 25px;
  position: relative;
}

.mfn-close-icon > span {
  display: none;
  visibility: hidden;
}

.mfn-close-icon:hover .icon {
  transform: none!important;
}

.slider_pagination .slick-active a::after,
.slider_pagination a.selected::after {
  display: none;
  visibility: hidden;
}

.slider_pagination .slick-active a,
.slider_pagination a.selected {
  border-radius: 100%;
  height: 12px;
  width: 12px;
  background: linear-gradient(180deg, rgb(89, 202, 253) 0%, rgb(43, 80, 239) 100%);
}

.mcb-section .mcb-wrap .mcb-item-e4e38c6f9 .trailer_box .desc .subtitle {
  text-transform: none;
  font-size: 16px;
}

.mcb-section .mcb-wrap .mcb-item-mdz8bm5ch .title {
  background-position:center center;
  text-align:center;
}

.mcb-column-inner-d7bngqrz7 {
  margin-bottom: 60px !important;
  text-align: center;
}

.mcb-item-j1cgwfhsd {
  text-align: center;
  margin-top: 15px;
}

#contributor-container {
  display: flex;
  flex-flow: wrap;
  margin-top: 30px;
  justify-content: center;
}

.github-profile-badge-wrapper {
    text-decoration: none;
    display: flex;
    -webkit-tap-highlight-color: transparent;
    padding-bottom: 5px;
    padding-right: 5px;
}

.github-profile-badge-img-wrapper {
    position: relative;
    height: 50px;
}

.github-profile-badge-img {
    border-radius: 50%;
    width: 50px;
    height: 50px;
    background: #1c1c1c;
}

.github-profile-badge-name-wrapper {
    box-sizing: content-box;
    display: flex;
    align-items: center;
    overflow: hidden;
    background: #1c1c1c;
    white-space: nowrap;
    align-self: stretch;
    padding-left: 25px;
    margin-left: -25px;
    border-top-right-radius: 25px;
    border-bottom-right-radius: 25px;
    transition: all 0.5s ease;
}

.github-profile-badge-name {
    font-size: 15px;
    color: white;
    margin: 0;
    padding: 0;
    margin-left: 10px;
    margin-right: 10px;
    font-family: 'Fira Code';
}

.github-profile-badge {
  word-break: normal!important;
  padding: 5px;
  filter: drop-shadow(0px 0px 5px rgba(0,0,0,0));
  transition: transform .15s ease-in-out, filter .15s ease-in-out;
}

.github-profile-badge:hover {
  transform: scale(1.2);
  z-index: 1;
  filter: drop-shadow(0px 0px 5px rgba(0,0,0,0.2));
}

.github-profile-badge.always-expanded .fa-solid {
  font-size: 30px;
  line-height: 50px;
  width: 50px;
  display: inline-block;
  background: #f0f0f0;
  border-radius: 50%;
  font-style: normal;
}

.github-profile-badge.always-expanded .fa-star {
  color: #b9a500;
}

.github-profile-badge.always-expanded .fa-layer-group {
  color: #6333d2;
}

.github-profile-badge.always-expanded .github-profile-badge-name {
  font-weight: 800;
}

.special-thanks {
  margin-top:20px;
}

#apps .button {
  background-color: #0047ABB2;
  backdrop-filter: blur(8px);
}

.special-thanks a {
  white-space: nowrap;
}

.icon_box .icon_wrapper {
  transform: scale(.94)!important;
}

.icon_box .icon_wrapper::before,
.icon_box a .icon_wrapper::before {
  background-color: #fff!important;
}

.trailer_box:hover .desc {
  transform: translateY(60px);
  opacity: 0;
}

.trailer_box .desc > div {
  pointer-events: none;
}

.trailer_box .desc {
  -webkit-transition: all .3s ease-in-out;
  -moz-transition: all .3s ease-in-out;
  -o-transition: all .3s ease-in-out;
  transition: all .3s ease-in-out;
}
/* ... */

